@@ -20,6 +20,8 @@ See the tutorial at http://lucene.apache.org/solr/tutorial.html
 
 ==================  5.0.0 ==================
 
+Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
+
 Versions of Major Components
 ---------------------
 Apache Tika 1.5
@@ -100,6 +102,8 @@ Other Changes
   command and DataImportHandler responses. (ehatcher)
 
 ==================  4.10.0 =================
+
+Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release
 
 Versions of Major Components
 ---------------------
